o adding profile for osx and setting properties for  - target platform where window tester is excluded  - osgi.ws = cocoa  - argline for -XstartOnFirstThread so that tests run correctly and don't hang